<?xml version="1.0"?>
<package format="2">
  <name>rl_agent</name>
  <version>0.0.0</version>
  <description>The rl_agent package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="carlos.sampedro@upm.es">carlos</maintainer>
  <maintainer email="alejandro.rramos@upm.es">alejandro</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
	<depend>rospy</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>	
	<depend>sensor_msgs</depend>
	<depend>cv_bridge</depend>
  <depend>droneMsgsROS</depend>
	<build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
