<package>
	<name>RlEnvironmentGazeboRos</name>
	<version>1.0.0</version>
	<description>
    		This package is droneAperiodicLandingROSModule.
	</description>
        <author email="alejandro.rramos@upm.es">Alejandro Rodriguez-Ramos</author>
        <author email="carlos.sampedro@upm.es">Carlos Sampedro</author>
        <maintainer email="alejandro.rramos@upm.es">Alejandro Rodriguez-Ramos</maintainer>
        <maintainer email="carlos.sampedro@upm.es">Carlos Sampedro</maintainer>
  	<license>BSD</license>
	<url></url>

  	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>droneMsgsROS</build_depend>
	<build_depend>droneModuleROS</build_depend>
	<build_depend>std_msgs</build_depend>
        <build_depend>nav_msgs</build_depend>
	<build_depend>rl_srvs</build_depend>
        <build_depend>rosbag</build_depend>
        <build_depend>cv_bridge</build_depend>
        <build_depend>image_transport</build_depend>
        <build_depend>tf</build_depend>
        <build_depend>control_toolbox</build_depend>





	<run_depend>roscpp</run_depend>
        <run_depend>droneMsgsROS</run_depend>
	<run_depend>droneModuleROS</run_depend>
	<run_depend>std_msgs</run_depend>
        <run_depend>nav_msgs</run_depend>
	<run_depend>rl_srvs</run_depend>
        <run_depend>rosbag</run_depend>
        <run_depend>cv_bridge</run_depend>
        <run_depend>image_transport</run_depend>
        <run_depend>tf</run_depend>
        <run_depend>control_toolbox</run_depend>




</package>


