<package>
	<name>rl_srvs</name>
	<version>1.0.0</version>
	<description>
    		This package is droneAperiodicLandingROSModule.
	</description>
	<author email="alejandro.rramos@upm.es">Zorana Milosevic</author>
	<maintainer email="alejandro.rramos@upm.es">Zorana Milosevic</maintainer>
  	<license>BSD</license>
	<url></url>

  	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>message_runtime</run_depend>

</package>


